--- a/index.html
+++ b/index.html
@@ -452,19 +452,19 @@
                 </div>
                 <div class="space-y-8 staggered-reveal-container">
                     <div>
-                        <p class="text-yellow-300 text-lg font-semibold">2023 - Present (Pursuing)</p>
+                        <p class="text-yellow-300 text-lg font-semibold">2024 - Present (Pursuing)</p>
                         <h4 class="text-2xl font-bold text-white">Bachelor of Engineering (B.E.) in Computer Engineering</h4>
                         <p class="text-gray-400">Savitribai Phule Pune University</p>
                         <p class="mt-2 text-gray-300">Currently enhancing my skills in advanced computing concepts, software development methodologies, and data structures. Actively engaged in various academic projects.</p>
                     </div>
                     <div>
-                        <p class="text-yellow-300 text-lg font-semibold">2014 - 2018</p>
+                        <p class="text-yellow-300 text-lg font-semibold">2021 - 2024</p>
                         <h4 class="text-2xl font-bold text-white">Diploma in Computer Engineering</h4>
                         <p class="text-gray-400">Zeal Polytechnic, Narhe, Pune</p>
                         <p class="mt-2 text-gray-300">Grade: First Class Distinction (86.23%). Developed strong foundational knowledge in computer science principles and completed several practical projects.</p>
                     </div>
                     <div>
-                        <p class="text-yellow-300 text-lg font-semibold">2012 - 2013</p>
+                        <p class="text-yellow-300 text-lg font-semibold">2021 Completed</p>
                         <h4 class="text-2xl font-bold text-white">Higher Secondary Certificate (HSC)</h4>
                         <p class="text-gray-400">Good Shepherd Academy, Chalisgaon</p>
                         <p class="mt-2 text-gray-300">Grade: First Class Distinction (89%). Strong academic performance in science stream.</p>
